[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Gaurav Paruthi <gparuthi@umich.edu>"]
description = ""
name = "ot-py"
version = "0.1.0"
[tool.poetry.dependencies]
pytest = "^6.2.2"
python = "^3.8"
[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
